// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] Header - HeaderLogo Should render BIL correctly 1`] = `
<div>
  <div
    class="LinkWrapper"
  >
    <a
      class="BilanzLogo"
      data-testid="mocked-link"
      href="https://www.bilanz.ch"
    >
      <div
        data-testid="mocked-logo"
      >
        logo/bilanz
      </div>
    </a>
  </div>
</div>
`;

exports[`[Component] Header - HeaderLogo Should render HZ correctly 1`] = `
<div>
  <div
    class="LinkWrapper"
  >
    <span>
      <a
        class="HZLogo"
        data-testid="mocked-link"
        href="/"
      >
        <div
          data-testid="mocked-logo"
        >
          logo/handelszeitung
        </div>
      </a>
    </span>
  </div>
</div>
`;

exports[`[Component] Header - HeaderLogo Should render HZB correctly 1`] = `
<div>
  <div
    class="LinkWrapper"
  >
    <a
      class="HZLogo"
      data-testid="mocked-link"
      href="/banking"
    >
      <div
        data-testid="mocked-logo"
      >
        logo/handelszeitung
      </div>
    </a>
  </div>
</div>
`;

exports[`[Component] Header - HeaderLogo Should render INS correctly 1`] = `
<div>
  <div
    class="LinkWrapper"
  >
    <a
      class="SVLogo"
      data-testid="mocked-link"
      href="/insurance"
    >
      <div
        data-testid="mocked-logo"
      >
        logo/insurance
      </div>
    </a>
  </div>
</div>
`;
